--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,9 +3,9 @@ title: Início
 ---
 
 <img
-src={require('./Perfil.png').default}
-alt="Description of the image"
-style={{
+  src={require('./Perfil.png').default}
+  alt="Description of the image"
+  style={{
     width: '200px',
     height: '200px',
     display: 'block',
@@ -15,12 +15,12 @@ style={{
   }}
 />
 
-<h1 style={{ textAlign: "center" }}>Rodrigo Gonçalves</h1>
+<h1 style={{ textAlign: 'center' }}>Rodrigo Gonçalves</h1>
 
 Olá Mundo 👋
 
 Eu sou o Rodrigo Gonçalves.
 
-Fiz esse blog para compartilhar conhecimento sobre TI.
+Fiz esse blog para compartilhar conhecimento sobre desenvolvimento de games.
 
 Você pode me encontrar no [Linkedin](https://www.linkedin.com/in/rodrigogon/) e [GitHub](https://github.com/Oosasukel).
