feat: oosasukel para rodrigogonn

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -23,4 +23,4 @@ Eu sou o Rodrigo Gonçalves.
 
 Fiz esse blog para compartilhar conhecimento sobre desenvolvimento de games.
 
-Você pode me encontrar no [Linkedin](https://www.linkedin.com/in/rodrigogon/) e [GitHub](https://github.com/Oosasukel).
+Você pode me encontrar no [Linkedin](https://www.linkedin.com/in/rodrigogon/) e [GitHub](https://github.com/rodrigogonn).
